BUG-FIX > button—icon, spacing with text was not working.

--- a/scss/partials/_button-v1-0.scss
+++ b/scss/partials/_button-v1-0.scss
@@ -319,7 +319,7 @@
 				}
 			}
 
-			span ~ .icon, .icon ~ span {
+			span ~ i, i ~ span {
 				margin-left: $extra-small-spacing !important;
 			}
 		}
